# exposicion-acustica

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: meta.properties
data/resultados/: estadisticos_completos.csv  estadisticos_reducido_80.csv  intensidad_completa.csv  intensidad_reducido_80.csv  laeq_dosis_completo.csv  laeq_dosis_reducido_80.csv  reducido_80.csv  resultados_completos.csv  resultados_reducido_80.csv
src/: __init__.py
src/graphics/: __init__.py  viewer.py
src/integration/: __init__.py  analize.py  calculations.py  dB_to_intensity.py  errors.py  metods.py  statisticists.py
src/io/: __init__.py  exportCSV.py  read.py
src/utils/: __init__.py  acustic.py  geojson_to_csv.py  remove_percentage.py  transforms.py  truncate.py  validations.py
