[project]
name = "exposicion-acustica"
version = "1.0"
description = ""
authors = [
    {name = "Oyhs-co",email = "oyhsotelo@gmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars (>=1.35.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]

[tools]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
